css/main.css
h1, h2, h3, h4 {
	margin: 0;
	letter-spacing: 2px;
	line-height: 1.5;
}

ul{
	margin: 0;
	padding: 0;
}

img {
	width: 100%
	height: auto;
}

.topbar {
	padding: 0 20px;
	line-height: 80px;
	box-sizing: border-box;
}

.container {
	max-width: 1400px;
	box-sizing: border-box;
}

#nav {
	float: right;
}

#nav ul {
	margin: 0;
	padding-left: 0;
	list-style-type: none;
}

#nav li {
	display: inline;
	padding: 0 20px; 
}

#nav a {
	text-transform: uppercase;
	color: #D3D7DC;
}

#nav a:hover{
	color: white;
	text-decoration: none;
}

#menu-trigger .material-icons {
	display: none;
	position: fixed;
    right: 10px;
    width: 30px;
}

#goto-second-page .material-icons{
	position: relative;
	color: #D3D7DC;
	left: 50%;
	transform: translate(-50%, 0);
	font-size: 4em;
}

#goto-second-page .material-icons:hover{
	color: white;
}

#header-back {
	position:fixed;
	left: 0;
	top: 0;
	right:0;
	bottom: 5%;
    background-image: url(../assets/background_img.JPG);
    background-size: cover;
    background-position: 50% 0;
    background-repeat: no-repeat;
}

.header{
	text-align: center;
}

.header img{
    margin: 100px 0 0 0;
    width: 250px;
    height: 250px;
    text-align: center;
    border: 7px solid #D3D7DC;
    border-radius: 50%;
}

.simply-introduce{
	padding-top: 20px;
}

.simply-introduce h1, h3 {
	color: white;
}

.tel-mail {
	margin-top: 10px;
}

.tel-mail li{
	display: inline;
	padding: 20px;
}

.tel-mail li a{
	color: #D3D7DC;
}

.tel-mail li a:hover {
	color: white;
	text-decoration: none;
}


@media (max-width: 625px) {
	#menu-trigger .material-icons {
		display: block;
		margin-right: 30px; 
		font-size: 2em;
		color: #D3D7DC;
	}

	#menu-trigger .material-icons:hover {
		color: white;
	}

	#nav { /*do the mobile nav page*/
		display: none;
		position: fixed;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: #282928;
	}

	#nav ul {
		position: relative;	/* must be used cuz top*/
		text-align: center;
		top: 50%;
		transform: translate(0, -50%);  /* translate(left,right||top,down) to move*/
	}

	#nav li {
		display: block;
		line-height: 2;
		font-size: 2em;
	}
}

@media (max-width: 991px) {
	.container {
	}
}

